--- a/styles/style.css
+++ b/styles/style.css
@@ -5,13 +5,13 @@
  * 
  */
 
- :root {
-   --grey-dark: #292b2c;
-   --grey-light: #e4e4e4;
-   --orange-dark: #c05326;
-   --orange-light: #f7eae4;
-   --white: #fff;
- }
+:root {
+  --grey-dark: #292b2c;
+  --grey-light: #e4e4e4;
+  --orange-dark: #c05326;
+  --orange-light: #f7eae4;
+  --white: #fff;
+}
 
 body {
   margin: 0;
@@ -24,7 +24,12 @@ button {
   font-size: 1rem;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -74,8 +79,8 @@ p {
   font-weight: 600;
   text-transform: uppercase;
   text-decoration: none;
+  padding: 15px;
 }
-
 
 /* Text styles */
 
@@ -92,11 +97,9 @@ p {
   border-left-color: var(--orange-dark);
 }
 
-
 /* Buttons */
 
-  /* INSERT BUTTON STYLES HERE */
-
+/* INSERT BUTTON STYLES HERE */
 
 /* Content */
 
@@ -120,20 +123,26 @@ p {
 /* hero */
 
 .hero {
-  background-image: url("header-bike.jpg");
+  background-image: url("/images/header-bike.jpg");
   background-color: var(--grey-light);
+  height: 355px;
 }
 
 .hero h1 {
+  position: absolute;
+  top: 30%;
   margin-bottom: 1rem;
   font-size: 2.5rem;
+  color: white;
 }
 
 .hero p {
+  top: 37%;
+  position: absolute;
   font-size: 1.2rem;
   margin-bottom: 2rem;
+  color: white;
 }
-
 
 /* Headings */
 
@@ -158,17 +167,33 @@ p {
   background: var(--orange-dark);
 }
 
-
+button {
+  position: absolute;
+  top: 45%;
+  padding: 10px;
+  margin-left: 10px;
+}
 /* Article */
 
 .article {
   margin-bottom: 1rem;
+  display: flex;
+  gap: 15px;
+}
+.article1 {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .article__title {
-  margin-bottom: 0.5rem;
+  margin: 0px;
   font-size: 1rem;
   font-weight: 700;
+  padding: 15px;
+}
+.container {
+  display: flex;
 }
 
 .article__title-link {
@@ -179,6 +204,7 @@ p {
 .article__summary {
   margin-top: 0;
   margin-bottom: 1rem;
+  padding: 15px;
 }
 
 .article__thumbnail {
